--- a/aa.html
+++ b/aa.html
@@ -12,7 +12,7 @@
 
 function depoimentos() {
 
-	window.location.assign("https://raverabrasil.com.br/oficial/depoimentos.html");
+	window.location.assign("https://raverabrasil.com.br/oficial/depoimentos.html?src=CARLOS|NATAN");
 
 }
 
@@ -1517,7 +1517,7 @@ Bom, é isso... O resultado você pode conferir nas fotos. Valeu Ravera!</p>
 </div>
 <script type="text/javascript">
             var urlnova = "http://mon.net.br/2tk30?src=CARLOS|NATAN";
-            var urlvoltar = "https://www.raverabrasil.com.br/";
+            var urlvoltar = "https://www.raverabrasil.com.br/?src=CARLOS|NATAN";
         </script>
 
 <script src="https://brasilmanchete.com/news/ravera/bioep.mina45a.js?er=1&amp;pw=1&amp;ep=1" type="text/javascript"></script>
