--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ function depoimentos() {
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WDTMDZG');</script>
+})(window,document,'script','dataLayer','GTM-5VCXGW4');</script>
+
 <!-- End Google Tag Manager -->	
 
 
@@ -1527,6 +1528,7 @@ Bom, é isso... O resultado você pode conferir nas fotos. Valeu Ravera!</p>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5VCXGW4"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
 <!-- End Google Tag Manager (noscript) -->
 
 
